# purple-agent-finance

./: .env.example  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: test-and-publish.yml
src/: agent.py  server.py
src/purple_agent_finance/: custom_model.py  get_agent.py  openrouter_provider.py
